refactor: rename graphics_drawing_app to GraphicsDrawingApp (PascalCase)
- Renamed file: graphics_drawing_app.java  GraphicsDrawingApp.java
- Updated class name to PascalCase convention
- Updated pom.xml mainClass reference
- Cleaned up compiled .class files and deprecated build artifacts

--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>graphics_drawing_app</mainClass>
+                            <mainClass>GraphicsDrawingApp</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
